<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/bannerSliderViewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bannerSliderViewPager">

                <TextView
                    android:id="@+id/adTitle"
                    style="@style/font20sp_medium_black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:maxLines="2"
                    android:text="@string/sampleTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/price"
                    style="@style/font20sp_medium_green500"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/_1_260"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/adTitle" />

                <TextView
                    android:id="@+id/address"
                    style="@style/font14sp_regular_gray600"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/ad_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/price" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_calendar"
                    app:layout_constraintBottom_toBottomOf="@+id/dateTime"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/dateTime"
                    android:contentDescription="@string/ad_date" />

                <TextView
                    android:id="@+id/dateTime"
                    style="@style/font14sp_regular_gray600"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/_11_02_2020"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/address" />

                <ImageView
                    android:id="@+id/viewVer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/dateTime"
                    app:layout_constraintStart_toEndOf="@+id/dateTime"
                    app:layout_constraintTop_toTopOf="@+id/dateTime"
                    app:srcCompat="@drawable/ic_visits"
                    android:contentDescription="@string/visit_count" />

                <TextView
                    android:id="@+id/visits"
                    style="@style/font14sp_regular_gray600"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/_122"
                    app:layout_constraintBottom_toBottomOf="@+id/viewVer"
                    app:layout_constraintStart_toEndOf="@+id/viewVer"
                    app:layout_constraintTop_toTopOf="@+id/viewVer" />

                <TextView
                    android:id="@+id/adId"
                    style="@style/font14sp_regular_gray600"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ad_id"
                    app:layout_constraintBottom_toBottomOf="@+id/visits"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/visits"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/detailsSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <TextView
                    android:id="@+id/details"
                    style="@style/font20sp_medium_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/details" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/detailRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details"
                    tools:listitem="@layout/details_item" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/featuresSection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailsSection">

                <TextView
                    android:id="@+id/ausstattung"
                    style="@style/font20sp_medium_black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/ausstattung"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider3"
                    style="@style/divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ausstattung" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/features_recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.512"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider3"
                    tools:listitem="@layout/ausstattung_item" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/documentsSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/featuresSection">

                <TextView
                    android:id="@+id/documents"
                    style="@style/font20sp_medium_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/weitere_informationen" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/documents_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    tools:listitem="@layout/weitere_information_item" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/descriptionSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/documentsSection"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/descriptionTitle"
                    style="@style/font20sp_medium_black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/beschreibung"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider2"
                    style="@style/divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTitle" />

                <TextView
                    android:id="@+id/description"
                    style="@style/font14sp_regular_black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:textIsSelectable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider2" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>

